testsuite/poke.pkl/gt-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .> (2 as uint<15>); /* { dg-error "invalid operand .*" } */
